// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Asset Size 1`] = `
".icon{
background-size:304px 85px
}"
`;

exports[`Autoprefixer 1`] = `
":-webkit-full-screen a{
display:-webkit-box;
display:flex
}

:-moz-full-screen a{
display:flex
}

:-ms-fullscreen a{
display:-ms-flexbox;
display:flex
}

:fullscreen a{
display:-webkit-box;
display:-ms-flexbox;
display:flex
}"
`;

exports[`CSS-O (Optimizer) 1`] = `
".elem{
color:red
}"
`;

exports[`Calc Keep 1`] = `
".elem{
width:calc(100px + 2%)
}"
`;

exports[`Calc Trivial 1`] = `
".elem{
width:310px
}"
`;

exports[`Calc Variable 1`] = `
".elem{
width:210px
}"
`;

exports[`Clearfix 1`] = `
".row:after{
content:'';
display:block;
clear:both
}"
`;

exports[`Color Function 1`] = `
".yellow{
color:rgba(255,255,0,.9)
}"
`;

exports[`Easings 1`] = `
".snake{
-webkit-transition:all 600ms cubic-bezier(.47,0,.745,.715);
transition:all 600ms cubic-bezier(.47,0,.745,.715)
}"
`;

exports[`Gradient Fix 1`] = `
".elem{
background-image:-webkit-linear-gradient(green,rgba(0,128,0,0));
background-image:linear-gradient(green,rgba(0,128,0,0))
}"
`;

exports[`Grid KISS 1`] = `
".gridTest{
display:grid;
-ms-flex-line-pack:justify;
align-content:space-between;
grid-template:\\"a a\\" 120px \\"b c \\" 1fr \\"e e\\" 60px/30% 1fr
}

.gridTest>header{
grid-area:a;
-ms-flex-item-align:start;
align-self:start
}

.gridTest>.sidebar{
grid-area:b
}

.gridTest>main{
grid-area:c
}

.gridTest>footer{
grid-area:e;
justify-self:center;
-ms-flex-item-align:end;
align-self:end
}

@supports not (grid-template-areas:\\"test\\"){
.gridTest{
position:relative;
display:block;
width:100%;
height:100%
}

.gridTest>*{
position:absolute;
box-sizing:border-box
}

.gridTest>header{
max-height:120px;
width:100%;
top:0;
left:0
}

.gridTest>.sidebar,.gridTest>main{
height:calc(100% - 180px);
width:30%;
top:120px;
left:0
}

.gridTest>main{
width:70%;
left:30%
}

.gridTest>footer{
-webkit-transform:translateX(-50%);
transform:translateX(-50%);
max-height:60px;
max-width:100%;
bottom:0;
left:50%
}
}

@media screen and (min-width:0\\\\0){
.gridTest{
position:relative;
display:block;
width:100%;
height:100%
}

.gridTest>*{
position:absolute;
box-sizing:border-box
}

.gridTest>header{
max-height:120px;
width:100%;
top:0;
left:0
}

.gridTest>.sidebar,.gridTest>main{
height:calc(100% - 180px);
width:30%;
top:120px;
left:0
}

.gridTest>main{
width:70%;
left:30%
}

.gridTest>footer{
-webkit-transform:translateX(-50%);
transform:translateX(-50%);
max-height:60px;
max-width:100%;
bottom:0;
left:50%
}
}"
`;

exports[`Hex with Alpha 1`] = `
".blue{
color:rgba(17,17,255,.8)
}"
`;

exports[`Lost Grid 1`] = `
".grid{
width:calc(24.975% - 22.5px)
}

.grid:nth-child(n){
float:left;
margin-right:30px;
clear:none
}

.grid:last-child{
margin-right:0
}

.grid:nth-child(12n){
margin-right:0;
float:right
}

.grid:nth-child(12n+1){
clear:both
}"
`;

exports[`Magic Animations 1`] = `
".animation{
-webkit-animation-name:magic;
animation-name:magic
}

@-webkit-keyframes magic{
0%{
opacity:1;
-webkit-transform-origin:100% 200%;
transform-origin:100% 200%;
-webkit-transform:scale(1,1) rotate(0deg);
transform:scale(1,1) rotate(0deg)
}

to{
opacity:0;
-webkit-transform-origin:200% 500%;
transform-origin:200% 500%;
-webkit-transform:scale(0,0) rotate(270deg);
transform:scale(0,0) rotate(270deg)
}
}

@keyframes magic{
0%{
opacity:1;
-webkit-transform-origin:100% 200%;
transform-origin:100% 200%;
-webkit-transform:scale(1,1) rotate(0deg);
transform:scale(1,1) rotate(0deg)
}

to{
opacity:0;
-webkit-transform-origin:200% 500%;
transform-origin:200% 500%;
-webkit-transform:scale(0,0) rotate(270deg);
transform:scale(0,0) rotate(270deg)
}
}"
`;

exports[`Nested Basic 1`] = `
"body h1{
font-weight:700
}

body h2{
font-weight:400
}"
`;

exports[`Nested Parent Selector 1`] = `
"body ul li:first-child{
margin-top:0
}"
`;

exports[`RGBA with Hex 1`] = `
".red{
color:rgba(255,17,17,.8)
}"
`;

exports[`Responsive Type 1`] = `
"html{
font-size:calc(7.60465px + 1.04651vw)
}

@media screen and (min-width:1280px){
html{
font-size:21px
}
}

@media screen and (max-width:420px){
html{
font-size:12px
}
}"
`;

exports[`Sassy Mixins 1`] = `
"h1{
color:red
}"
`;

exports[`Sassy Variables 1`] = `
"h1{
background:red
}"
`;

exports[`Simple URL 1`] = `
".icon{
background:url(../fixtures/formula.png)
}"
`;

exports[`Smart Import Basic 1`] = `
".root{
color:red
}"
`;

exports[`Smart Import with Merge 1`] = `
".section{
color:#00d;
background:#333
}"
`;

exports[`Will Change Compat 1`] = `
".scaled{
-webkit-backface-visibility:hidden;
backface-visibility:hidden;
will-change:width
}"
`;

exports[`zIndex 1`] = `
".first{
z-index:1
}

.second{
z-index:2
}"
`;
